--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 <img src="./assets/set-button.svg" alt="set button">
             </button>
         </div>
+    </main>
 
         <footer>
-            <button class="sound-on hide">
+            <button class="sound-on">
                 <img src="./assets/sound-on.svg" alt="sound on button">
             </button>
             <button class="sound-off hide">
                 <img src="./assets/sound-off.svg" alt="sound off button">
             </button>
         </footer>
-    </main>
 </body>
 </html>
