--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
     
-    <script src="./script.js" defer type="module"></script>
+    <script src="./js/index.js" defer type="module"></script>
 </head>
 <body>
     <main>
