--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </main>
 
         <footer>
-            <button class="sound-on">
+            <button class="sound-on hide">
                 <img src="./assets/sound-on.svg" alt="sound on button">
             </button>
-            <button class="sound-off hide">
+            <button class="sound-off ">
                 <img src="./assets/sound-off.svg" alt="sound off button">
             </button>
         </footer>
